@@ -61,6 +61,7 @@ struct kwmOptions {
   bool MaximizeOnlyVertically;
   int TitleAnimation;
   int AutoRaise;
+  int ElectricBorder;
   bool ControlTab;
   bool Button3Grab;
   //CT 18jan98
